--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,7 @@
 
 @import 'sass/globals';
 
+@import 'sass/blocks/mobile-overlay';
 @import 'sass/blocks/header'; 
 @import 'sass/blocks/links-line';
 @import 'sass/blocks/article';
