--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -13,3 +13,20 @@ $transition-duration: 0.2s;
 
 $pagination-bullet-color: #979797;
 $pagination-active-bullet-color: #B5B6BC;
+
+:root {
+    
+--color-dark: #1B1C21;
+--color-gray: #7E7E82;
+--color-accent: #41F6D7;
+--color-background: #F8F8F8;
+--color-menu-background: #fff;
+--color-pink: #FF3E79;
+
+--box-shadow: 25px 0px 50px -3px rgba(11, 20, 66, 0.25);
+
+--border-radius: 6px;
+--border: 2px solid #B8FFEC;
+
+--transition-duration: 0.3s;
+}
