--- a/src/sass/blocks/_mobile-overlay.scss
+++ b/src/sass/blocks/_mobile-overlay.scss
@@ -1,12 +1,12 @@
 
 .mobile-overlay {
-    position: absolute;
-    top: -38px;
-    left: -22px;
+
     width: 100%;
     height: 100%;
     margin: 0;
     border: none;
+    padding: 0;
+    background-color: transparent;
 
     
 
@@ -14,11 +14,15 @@
         max-width: 100%;
         max-height: 100%;
     }
+
+    &::backdrop {
+        background-image: transparent;
+    }
 }
 
 .menu-overlay-container {
-    width: 320px;
-    height: 100vh;
+    width: clamp(320px, 100vw, 360px);
+    height: clamp(676px, 100vh, 1000px);
     display: flex;
     background-color: var(--color-menu-background);
     flex-direction: column;
@@ -56,6 +60,13 @@
     cursor: pointer;
 }
 
+.mobile-overlay__close-button {
+
+    // position: absolute;
+    // top: -38px;
+    // left: -22px;
+}
+
 
 .button-figure {
     display: flex;
@@ -74,7 +85,7 @@ button:hover {
     transition-duration: var(--transition-duration);
 }
 
-.header__logo {
+.header__overlay-logo {
     margin-left: 16px;
     margin-top: -6px;
     display: flex;
