--- a/src/sass/blocks/_article.scss
+++ b/src/sass/blocks/_article.scss
@@ -1,5 +1,6 @@
 .article__text {
     letter-spacing: 0.2px;
+    line-height: 1.3;
     margin-left: 16px;
     margin-right: 16px;
 }
@@ -12,6 +13,7 @@
     display: flex;
     flex-direction: column;
     column-gap: 48px;
+    margin-bottom: 24px;
 }
 
 .article__last-text {
