--- a/src/sass/blocks/_swiper.scss
+++ b/src/sass/blocks/_swiper.scss
@@ -1,4 +1,4 @@
-.header-swiper {
+.header-swiper, .swiper-second__header {
   background-image: linear-gradient(to right, var(--color-background), white);
   border-top: var(--header-border);
   height: 80px;
@@ -18,7 +18,7 @@
   color: var(--color-gray);
 }
 
-.brand-item__button {
+.brand-item__button, .service-item__button {
   background-color: transparent;
   display: block;
   border: none;
@@ -29,7 +29,19 @@
   cursor: pointer;
 }
 
-.swiper-container {
+.service-item__button {
+    align-self: flex-end;
+}
+
+.service-item__button, .swiper-second__text-wrapper {
+    margin: 16px 0;
+}
+
+.service-list-show-all-button, .show-all-button {
+    margin-bottom: 50px;
+}
+
+.swiper-container, .swiper-second__container {
   margin-top: 16px;
   margin-left: 16px;
   overflow: hidden;
@@ -59,19 +71,43 @@
   }
 }
 
-.swiper-pagination {
+.swiper-second__slide {
+    display: flex;
+    background-color: white;
+    min-width: 224px;
+    width: 224px;
+    height: 160px;
+    justify-content: space-between;
+    border-radius: var(--border-radius);
+    border: var(--brand-item-border);
+    padding-inline: 16px;
+    max-height: 1300vh;
+    transition: max-height 0.75s ease;
+  
+    @media (min-width: $tablet) {
+      width: 224px;
+    }
+  
+    @media (min-width: $desktop-s) {
+      background-color: white;
+      display: flex;
+      width: 240px;
+    }
+  }
+
+.swiper-pagination, .swiper-second__pagination {
   margin-top: 16px;
   position: static;
 }
 
-.swiper-pagination-bullet {
+.swiper-second__pagination-bullet, .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
   background-color: var(--pagination-bullet-color);
   margin: 6px;
 }
 
-.swiper-pagination-bullet-active {
+.swiper-second__pagination-bullet--active, .swiper-pagination-bullet--active {
   background-color: var(--pagination-active-bullet-color);
 }
 
@@ -79,9 +115,7 @@
   max-height: 44px;
 }
 
-.show-all-button {
-  display: none;
-}
+
 
 .brand-list {
   display: grid;
@@ -94,6 +128,19 @@
   @media (min-width: $desktop-s) {
     grid-template-columns: repeat(4, 1fr);
   }
+}
+
+.service-list {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    column-gap: 24px;
+    row-gap: 16px;
+    flex-wrap: wrap;
+  
+    @media (min-width: $desktop-s) {
+      grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 .swiper-horizontal::before {
@@ -111,12 +158,12 @@
   z-index: 10;
 }
 
-.show-all-button-clicked-element {
+.show-all-button-clicked-element, .service-list-show-all-button-clicked-element {
   transform: rotate(180deg);
   transition-duration: var(--transition-duration);
 }
 
-.brand-slide--invisible {
+.brand-slide--invisible, .service-slide--invisible {
   max-height: 0;
   overflow: hidden;
   opacity: 0;
@@ -125,7 +172,7 @@
   top: 500px;
 }
 
-.show-all-button {
+.show-all-button, .service-list-show-all-button {
   display: inline-flex;
   column-gap: 16px;
   font-weight: 500;
