Aside desktop menu added

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,3 +12,4 @@
 @import 'sass/blocks/links-line';
 @import 'sass/blocks/article';
 @import 'sass/blocks/swiper';
+@import 'sass/blocks/desktop-menu'
