--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -1,38 +1,51 @@
-@mixin reset-link {
-    color: inherit;
-
-    &,
+@mixin hover {
+  @media (hover: hover) {
     &:hover {
-       text-decoration: none;
+      @content;
     }
+  }
 
+  @media (hover: none) {
+    &:active {
+      @content;
+    }
+  }
+}
+
+@mixin reset-link {
+  color: inherit;
+
+  &,
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 @mixin reset-button {
-    padding: 0;
-    background-color: transparent;
-    border: none;
+  padding: 0;
+  background-color: transparent;
+  border: none;
 }
 
 @mixin flex-center($isInline: false) {
-    @if $isInline {
-        display: inline-flex;
-    } @else {
-        display: flex;
-    }
+  @if $isInline {
+    display: inline-flex;
+  } @else {
+    display: flex;
+  }
 
-    justify-content: center;
-    align-items: center;
+  justify-content: center;
+  align-items: center;
 }
 
 @mixin abs-center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    translate: -50% -50%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  translate: -50% -50%;
 }
 
 @mixin square($size) {
-    width: $size;
-    aspect-ratio: 1;
+  width: $size;
+  aspect-ratio: 1;
 }
