--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -73,9 +73,23 @@
    align-items: center;
 
 }
+
+.header-menu__right {
+    @media (min-width: $desktop) {
+        position: absolute;
+        right: 22vw;
+        bottom: 0
+    }
+
+}
+
 .button__image {
    max-width: 20px;
    max-height: 20px;
+}
+
+.button__text {
+    display: none;
 }
 
 button:hover,
@@ -222,7 +236,7 @@ button:hover,
     }
 }
 
-@media (min-width: 1120px) {
+@media (min-width: $desktop) {
     .header {
         visibility: hidden;
     }
