Price list edited

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,4 +12,5 @@
 @import 'sass/blocks/links-line';
 @import 'sass/blocks/article';
 @import 'sass/blocks/swiper';
-@import 'sass/blocks/desktop-menu'
+@import 'sass/blocks/desktop-menu';
+@import 'sass/blocks/price-list'
