--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,12 +1,8 @@
 :root {
-  --color-dark: #1b1c21;
-  --color-gray: #7e7e82;
-  --color-accent: #41f6d7;
-  --color-background: #f8f8f8;
-  --color-pink: #ff3e79;
 
   --border: 2px solid #b8ffec;
   --border-radius: 6px;
+  --price-list-border-radius: 8px;
   --header-border: 2px solid #d9fff5;
   --brand-item-border: 1px solid #eaeaea;
 
@@ -21,6 +17,8 @@
   --color-background: #f8f8f8;
   --color-menu-background: #fff;
   --color-pink: #ff3e79;
+  --color-slide: white;
+  --color-price-list-line: #eaeaea;
 
   --box-shadow: 25px 0px 50px -3px rgba(11, 20, 66, 0.25);
 
