--- a/src/sass/blocks/_swiper.scss
+++ b/src/sass/blocks/_swiper.scss
@@ -1,14 +1,16 @@
-.header-swiper, .swiper-second__header {
-  background-image: linear-gradient(to right, var(--color-background), white);
-  border-top: var(--header-border);
-  height: 80px;
-
+.header-swiper {
   @media (min-width: 376px) {
     height: 55px;
   }
 }
 
-.header-swiper__text {
+.swiper-second__header {
+  @media (min-width:354px) {
+    height: 55px
+  }
+}
+
+.swiper-header__text {
   font-weight: 300;
   font-size: 16px;
   text-transform: uppercase;
@@ -41,14 +43,10 @@
     margin-bottom: 50px;
 }
 
-.swiper-container, .swiper-second__container {
-  margin-top: 16px;
-  margin-left: 16px;
-  overflow: hidden;
-}
+
 
 .swiper-slide {
-  background-color: white;
+  background-color: var(--color-slide);
   display: flex;
   width: 240px;
   height: 72px;
@@ -65,7 +63,6 @@
   }
 
   @media (min-width: $desktop-s) {
-    background-color: white;
     display: flex;
     width: 240px;
   }
@@ -73,7 +70,7 @@
 
 .swiper-second__slide {
     display: flex;
-    background-color: white;
+    background-color: var(--color-slide);
     min-width: 224px;
     width: 224px;
     height: 160px;
@@ -89,34 +86,12 @@
     }
   
     @media (min-width: $desktop-s) {
-      background-color: white;
       display: flex;
       width: 240px;
     }
   }
 
-.swiper-pagination, .swiper-second__pagination {
-  margin-top: 16px;
-  position: static;
-  margin-bottom: 24px;
-  display: flex;
-  justify-content: center;
 
-  @media (min-width: $tablet) {
-    margin: 0;
-  }
-}
-
-.swiper-second__pagination-bullet, .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background-color: var(--pagination-bullet-color);
-  margin: 6px;
-}
-
-.swiper-second__pagination-bullet--active, .swiper-pagination-bullet--active {
-  background-color: var(--pagination-active-bullet-color);
-}
 
 .brand-item__logo {
   max-height: 44px;
@@ -163,7 +138,7 @@
   );
   background-image: linear-gradient(to right, rgba(52, 73, 94, 0), #f8f8f8);
   z-index: 10;
-}
+} 
 
 .swiper-second__container::before {
     content: '';
