--- a/src/index.scss
+++ b/src/index.scss
@@ -13,4 +13,5 @@
 @import 'sass/blocks/article';
 @import 'sass/blocks/swiper';
 @import 'sass/blocks/desktop-menu';
-@import 'sass/blocks/price-list'
+@import 'sass/blocks/price-list';
+@import 'sass/blocks/footer'
