--- a/src/sass/_globals.scss
+++ b/src/sass/_globals.scss
@@ -50,7 +50,7 @@
 
 .header-swiper, .swiper-second__header, .price-list__header {
     background-image: linear-gradient(to right, var(--color-background), white);
-    border-top: var(--header-border);
+    border-top: var(--border-light);
     height: 80px;
   
   
