--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,7 +3,7 @@
   --border: 2px solid #b8ffec;
   --border-radius: 6px;
   --price-list-border-radius: 8px;
-  --header-border: 2px solid #d9fff5;
+  --border-light: 2px solid #d9fff5;
   --brand-item-border: 1px solid #eaeaea;
 
   --transition-duration: 0.2s;
