--- a/src/sass/blocks/_price-list.scss
+++ b/src/sass/blocks/_price-list.scss
@@ -41,10 +41,12 @@
   }
 
   &__contact {
+    @include reset-button;
     display: inline-flex;
     flex-direction: row;
+    align-items: center;
 
-    @include reset-link;
+
     margin-left: 16px;
 
     @include hover {
