--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,6 +5,7 @@
   --price-list-border-radius: 8px;
   --border-light: 2px solid #d9fff5;
   --brand-item-border: 1px solid #eaeaea;
+  --input-border: 1px solid #eaeaea;
 
   --transition-duration: 0.2s;
 
@@ -13,6 +14,7 @@
 
   --color-dark: #1b1c21;
   --color-gray: #7e7e82;
+  --color-input-placeholder: #b5b6bc;
   --color-accent: #41f6d7;
   --color-background: #f8f8f8;
   --color-menu-background: #fff;
