--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -6,6 +6,7 @@
   --border-light: 2px solid #d9fff5;
   --brand-item-border: 1px solid #eaeaea;
   --input-border: 1px solid #eaeaea;
+  --input-outline-focus: 2px solid #b8ffec;
 
   --transition-duration: 0.2s;
 
