--- a/src/sass/blocks/_article.scss
+++ b/src/sass/blocks/_article.scss
@@ -3,13 +3,13 @@
     line-height: 1.3;
     margin-left: 16px;
     margin-right: 16px;
+
+    &:last-child {
+        display: none;
+    }
 }
 
-.article__text:last-child {
-    display: none;
-}
-
-.article-container {
+.article {
     display: flex;
     flex-direction: column;
     column-gap: 48px;
@@ -18,6 +18,10 @@
 
 .article__last-text {
     display: none;
+
+    @media (min-width: $desktop-s) {
+            display: inline;
+    }
 }
 
 .image-box {
@@ -42,7 +46,7 @@
 
 @media (min-width: 701px) {
 
-    .article-container {
+    .article {
         flex-direction: row;
         justify-content: space-between;
     }
@@ -60,7 +64,7 @@
         margin-right: 0;
     }
 
-    .article-text-part {
+    .article__container {
         max-width: 42.9vw;
     }
 
@@ -108,7 +112,7 @@
         padding-top: 42px;
     }
 
-    .article-container {
+    .article {
         column-gap: 36px;
     }
 
@@ -117,7 +121,7 @@
         width: 490px;
     }
 
-    .article-text-part {
+    .article__container {
        max-width: 46.87vw;
     }
 
@@ -140,5 +144,6 @@
         width: 531px;
         height: 307px;
     }
+
 
 }
